# gnitz

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  Makefile  README.md  appendix.md  async-invariants.md  bundle_files.py  debug.sh  debug_reproduce_failure.py  dev-guide.md  foundations.md  gnitzdb_spec.md  jit_benchmark.py  plan.md  run.sh  test_blob_compaction.db  test_mt_ecs.db  test_xxh.py  translate_test.py  vm_comprehensive_test.py
crates/: Cargo.toml  rustfmt.toml
crates/gnitz-capi/: Cargo.toml  build.rs  gnitz.h
crates/gnitz-capi/examples/: c_test.c
crates/gnitz-capi/src/: lib.rs
crates/gnitz-core/: Cargo.toml
crates/gnitz-core/src/: circuit.rs  client.rs  connection.rs  error.rs  expr.rs  lib.rs  types.rs
crates/gnitz-core/src/protocol/: codec.rs  error.rs  header.rs  message.rs  mod.rs  transport.rs  types.rs  wal_block.rs
crates/gnitz-core/tests/: helpers.rs  integration.rs  ipc_failures.rs  tls_client.rs
crates/gnitz-engine/: Cargo.toml  clippy.toml
crates/gnitz-engine/proptest-regressions/runtime/: wire.txt
crates/gnitz-engine/proptest-regressions/storage/: columnar.txt
crates/gnitz-engine/src/: bench_cursor.rs  bootstrap.rs  catalog.rs  columnar.rs  committer.rs  compact.rs  compiler.rs  dag.rs  eval_batch.rs  executor.rs  expr.rs  ffi.rs  ipc.rs  ipc_sys.rs  layout.rs  lib.rs  log.rs  main.rs  master.rs  memtable.rs  merge.rs  partitioned_table.rs  reactor.rs  read_cursor.rs  scalar_func.rs  schema.rs  shard_file.rs  shard_index.rs  shard_reader.rs  sqlc.rs  sys.rs  table.rs  test_rng.rs  test_support.rs  util.rs  vm.rs  w2m_ring.rs  worker.rs  xxh.rs
crates/gnitz-engine/src/catalog/: apply_context.rs  bootstrap.rs  cache.rs  ddl.rs  hooks.rs  metadata.rs  migration.rs  mod.rs  partition_lsn.rs  registry.rs  store.rs  store_io.rs  sys_tables.rs  tests.rs  types.rs  utils.rs  validation.rs  write_path.rs
crates/gnitz-engine/src/expr/: batch.rs  mod.rs  plan.rs  program.rs
crates/gnitz-engine/src/foundation/: codec.rs  log.rs  mod.rs  posix_io.rs  syscall.rs  worker_ctx.rs  xxh.rs
crates/gnitz-engine/src/ops/: bench_secondary_index.rs  cogroup.rs  distinct.rs  exchange.rs  index.rs  join.rs  linear.rs  mod.rs  reduce.rs  reindex.rs  scan.rs  util.rs
crates/gnitz-engine/src/query/: mod.rs
crates/gnitz-engine/src/reactor/: exchange.rs  io.rs  mod.rs  ring.rs  sync.rs  uring.rs
crates/gnitz-engine/src/runtime/: bootstrap.rs  committer.rs  executor.rs  master.rs  mod.rs  sal.rs  sys.rs  w2m.rs  w2m_ring.rs  wire.rs  worker.rs
crates/gnitz-engine/src/schema/: key.rs
crates/gnitz-engine/src/storage/: batch.rs  batch_pool.rs  batch_wire.rs  bloom.rs  columnar.rs  compact.rs  data_roundtrip_proptest.rs  error.rs  heap.rs  layout.rs  manifest.rs  memtable.rs  merge.rs  mod.rs  partitioned_table.rs  range_key.rs  read_cursor.rs  shard_file.rs  shard_index.rs  shard_reader.rs  table.rs  wal.rs  xor8.rs
crates/gnitz-protocol/: Cargo.toml
crates/gnitz-protocol/src/: codec.rs  header.rs  lib.rs  message.rs  types.rs  wal_block.rs
crates/gnitz-py/: Cargo.toml  pyproject.toml
crates/gnitz-py/python/gnitz/: __init__.py  _batch.py  _builders.py  _client.py  _types.py  aio.py  (+1 more)
crates/gnitz-py/src/: lib.rs
crates/gnitz-py/tests/: _oracle.py  _serverproc.py  conftest.py  test_aggregates.py  test_async.py  test_backfill_chunked.py  test_boot_exchange_backfill.py  test_bulk.py  test_case_expr.py  test_catalog.py  test_checkpoint.py  test_compound_pk.py  test_computed_projections.py  test_crash_recovery.py  test_cte_chain.py  test_dbsp_ops.py  test_ddl.py  test_derived_table.py  test_dml.py  test_ergonomics.py  test_errors.py  test_exchange_ordering.py  test_execute_sql.py  test_exists.py  test_fk.py  test_groupby_chain.py  test_hidden_key_slots.py  test_i128_cross_sign_join.py  test_incremental.py  test_indices.py  test_insert_conflict.py  test_join_payload_pruning.py  test_join_residual.py  test_join_where.py  test_joins.py  test_left_join.py  test_migrations.py  test_multiway_join.py  test_multiworker_ops.py  test_narrow_key_copartition.py  (+30 more)
crates/gnitz-sql/: Cargo.toml
crates/gnitz-sql-parse/: Cargo.toml
crates/gnitz-sql-parse/src/: binder.rs  circuit.rs  classify.rs  error.rs  expr_compile.rs  expr_program.rs  lib.rs  migration.rs  plan_types.rs  resolver.rs  types.rs  view.rs
crates/gnitz-sql/src/: ast_util.rs  binder.rs  dispatch.rs  dml.rs  error.rs  expr.rs  ir.rs  lib.rs  logical_plan.rs  lower.rs  migration.rs  planner.rs  test_support.rs  types.rs
crates/gnitz-sql/tests/: helpers.rs  planner_ambiguous_column.rs  planner_cluster_by.rs  planner_create_index.rs  planner_create_table.rs  planner_cte.rs  planner_delete.rs  planner_distinct.rs  planner_dml_validation.rs  planner_exists.rs  planner_group_by.rs  planner_index_bound.rs  planner_join.rs  planner_null_join_key.rs  planner_null_predicate.rs  planner_projection.rs  planner_set_ops.rs  planner_view_validation.rs  planner_wildcard_modifiers.rs  slow_client_eviction.rs  transient_executor.rs  view_chain.rs
crates/gnitz-test-harness/: Cargo.toml
crates/gnitz-test-harness/src/: lib.rs
crates/gnitz-transport/: Cargo.toml
crates/gnitz-transport/src/: lib.rs  mock.rs  recv.rs  ring.rs  send.rs  transport.rs  uring.rs
crates/gnitz-wire/: Cargo.toml
crates/gnitz-wire/src/: catalog.rs  circuit.rs  control.rs  error.rs  expr.rs  flags.rs  german_string.rs  handshake.rs  lib.rs  migration.rs  pk.rs  range.rs  types.rs  uuid.rs  wal.rs
rust_client/gnitz-capi/: Cargo.toml  build.rs  cbindgen.toml  gnitz.h
rust_client/gnitz-capi/src/: lib.rs
rust_client/gnitz-py/: Cargo.toml  pyproject.toml
rust_client/gnitz-py/src/: lib.rs
rust_client/gnitz-py/tests/: conftest.py  test_aggregates.py  test_bulk.py  test_catalog.py  test_computed_projections.py  test_connect.py  test_dbsp_ops.py  test_ddl.py  test_dml.py  test_ergonomics.py  test_errors.py  test_incremental.py  test_indices.py  test_joins.py  test_left_join.py  test_persistence.py  test_set_ops.py  test_sql.py  test_string_predicates.py  test_tpch.py  test_unique_pk.py  test_views.py  test_workers.py  tpch_gen.py
(+850 files in other folders)
