[workspace]
resolver = "2"
members = [
    "gnitz-wire",
    "gnitz-core",
    "gnitz-sql",
    "gnitz-capi",
    "gnitz-py",
    "gnitz-engine",
    "gnitz-test-harness",
]

# Release: panic aborts the process so reactor-task panics surface as a
# backtrace on stderr instead of being silently dropped.  Dev keeps unwind
# so `#[should_panic]` tests can observe them.
[profile.release]
panic = "abort"
# Fat LTO so hot paths inline across crate/module boundaries — e.g. the
# `repr::scatter` kernels calling `DirectWriter` in a sibling module, and the
# operator layer calling into storage.
lto = true

[profile.dev]
panic = "unwind"
