[package]
name = "gnitz-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gnitz-server"
path = "src/main.rs"

[dependencies]
gnitz-wire      = { path = "../gnitz-wire" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
xorf = { version = "0.12", default-features = false }
libc = "0.2"
io-uring = "0.7"
slab = "0.4"
rustc-hash = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
