[package]
name    = "gnitz-sql"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
sqlparser  = "0.56"
gnitz-core = { path = "../gnitz-core" }

[dev-dependencies]
gnitz-test-harness = { path = "../gnitz-test-harness" }
gnitz-wire = { path = "../gnitz-wire" }
libc = "0.2"
