[package]
name    = "gnitz-sql"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
sqlparser  = "0.56"
gnitz-core = { path = "../gnitz-core" }
gnitz-wire = { path = "../gnitz-wire" }

[dev-dependencies]
gnitz-test-harness = { path = "../gnitz-test-harness" }
libc = "0.2"
