[package]
name    = "gnitz-capi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default     = []
integration = ["gnitz-core/integration"]

[dependencies]
gnitz-core     = { path = "../gnitz-core" }
gnitz-protocol = { path = "../gnitz-protocol" }
gnitz-sql      = { path = "../gnitz-sql" }

[build-dependencies]
cbindgen = "0.27"
