[package]
name    = "gnitz-py"
version = "0.1.0"
edition = "2021"

[lib]
name       = "gnitz"
crate-type = ["cdylib"]

[features]
default     = []
integration = ["gnitz-core/integration"]

[dependencies]
pyo3           = { version = "0.23", features = ["extension-module", "abi3-py310"] }
gnitz-core     = { path = "../gnitz-core" }
gnitz-protocol = { path = "../gnitz-protocol" }
gnitz-sql      = { path = "../gnitz-sql" }
