[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name             = "gnitz"
version          = "0.1.0"
requires-python  = ">=3.10"
classifiers      = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "maturin>=1.0,<2.0"]

[tool.pytest.ini_options]
markers = ["slow: large-scale / bulk tests (deselect with -m 'not slow')"]
xfail_strict = true

[tool.maturin]
features       = ["pyo3/extension-module"]
module-name    = "gnitz._native"
python-source  = "python"
